--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
         template: `
             <form @submit.prevent="handleSubmit">
                 <h1>{{title}}</h1>
-                <custom-input v-model="email" label="Email"/>  
-                <custom-input v-model="password" label="Password"/>    
+                <custom-input 
+                    v-for="(input, i) in inputs"
+                    :key="i"
+                    v-model="input.value"
+                    :label="input.label"
+                    :type="input.type"
+                />
                 <button>Log in</button>
             </form>
         `,
@@ -50,7 +55,20 @@
                 email: '',
                 password: '',
                 emailLabel: 'Email',
-                passwordLabel: 'Password'
+                passwordLabel: 'Password',
+
+                inputs: [
+                    {
+                        label: 'Email',
+                        value: '',
+                        type: 'email'
+                    },
+                    {
+                        label: 'Password',
+                        value: '',
+                        type: 'password'
+                    }
+                ]
             }
         },
         methods:{
@@ -65,10 +83,10 @@
         template: `
             <label>
                 {{label}}
-                <input type="text" v-model="inputValue"/>
+                <input :type="type" v-model="inputValue"/>
             </label>
         `,
-        props: ['label', 'modelValue'],
+        props: ['label', 'type', 'modelValue'],
         computed:{
             inputValue:{
                 get(){
@@ -79,11 +97,6 @@
                 }
             }
         }
-        // data(){
-        //     return{
-        //         inputValue: ''
-        //     }
-        // }
     })
 
     app.mount('#app');
